test/python/expected/pyodbc/TestUniqueIdentifier.out
CREATE TABLE uniqueidentifier_dt (a uniqueidentifier);

INSERT INTO uniqueidentifier_dt VALUES ('51f178a6-53c7-472c-9be1-1c08942342d7')
~~ROW COUNT: 1~~

INSERT INTO uniqueidentifier_dt VALUES ('dd8cb046-461d-411e-be40-d219252ce849')
~~ROW COUNT: 1~~

INSERT INTO uniqueidentifier_dt VALUES ('b84ebcc9-c927-4cfe-b08e-dc7f25b5087c')
~~ROW COUNT: 1~~

INSERT INTO uniqueidentifier_dt VALUES ('bab96bc8-60b9-40dd-b0de-c90a80f5739e')
~~ROW COUNT: 1~~

INSERT INTO uniqueidentifier_dt VALUES ('d424fdef-1404-4bac-8289-c725b540f93d')
~~ROW COUNT: 1~~

INSERT INTO uniqueidentifier_dt VALUES ('60aeaa5c-e272-4b17-bad0-c25710fd7a60')
~~ROW COUNT: 1~~

INSERT INTO uniqueidentifier_dt VALUES ('253fb146-7e45-45ef-9d92-bbe14a8ad1b2')
~~ROW COUNT: 1~~

INSERT INTO uniqueidentifier_dt VALUES ('dba2726c-2131-409f-aefa-5c8079571623')
~~ROW COUNT: 1~~

INSERT INTO uniqueidentifier_dt VALUES ('b3400fa7-3a60-40ec-b40e-fc85a3eb262d')
~~ROW COUNT: 1~~

INSERT INTO uniqueidentifier_dt VALUES ('851763b5-b068-42ae-88ec-764bfb0e5605')
~~ROW COUNT: 1~~

INSERT INTO uniqueidentifier_dt VALUES (NULL)
~~ROW COUNT: 1~~

SELECT * FROM uniqueidentifier_dt
~~START~~
str
51F178A6-53C7-472C-9BE1-1C08942342D7
DD8CB046-461D-411E-BE40-D219252CE849
B84EBCC9-C927-4CFE-B08E-DC7F25B5087C
BAB96BC8-60B9-40DD-B0DE-C90A80F5739E
D424FDEF-1404-4BAC-8289-C725B540F93D
60AEAA5C-E272-4B17-BAD0-C25710FD7A60
253FB146-7E45-45EF-9D92-BBE14A8AD1B2
DBA2726C-2131-409F-AEFA-5C8079571623
B3400FA7-3A60-40EC-B40E-FC85A3EB262D
851763B5-B068-42AE-88EC-764BFB0E5605
<NULL>
~~END~~


prepst#!#INSERT INTO uniqueidentifier_dt VALUES (?)#!#uniqueidentifier|-|a|-|51f178a6-53c7-472c-9be1-1c08942342d7
~~ROW COUNT: 1~~

prepst#!#exec#!#uniqueidentifier|-|a|-|767392df-87d0-450d-9b24-85a86c02811d
~~ROW COUNT: 1~~

prepst#!#exec#!#uniqueidentifier|-|a|-|9bcb5632-53c3-4695-b617-d9a7055813ce
~~ROW COUNT: 1~~

prepst#!#exec#!#uniqueidentifier|-|a|-|ac81a140-f686-4259-9b90-dd46f10b355f
~~ROW COUNT: 1~~

prepst#!#exec#!#uniqueidentifier|-|a|-|3d08372d-770c-48b9-9740-a667d036680e
~~ROW COUNT: 1~~

prepst#!#exec#!#uniqueidentifier|-|a|-|518d52c7-4d79-4143-ab33-b3765689fdf4
~~ROW COUNT: 1~~

prepst#!#exec#!#uniqueidentifier|-|a|-|bc3fa456-7391-4060-b5d8-430048075cf4
~~ROW COUNT: 1~~

prepst#!#exec#!#uniqueidentifier|-|a|-|3b75b2dd-01b7-4958-9de7-f92410693547
~~ROW COUNT: 1~~

prepst#!#exec#!#uniqueidentifier|-|a|-|ce8af10a-2709-43b0-9e4e-a02753929d17
~~ROW COUNT: 1~~

prepst#!#exec#!#uniqueidentifier|-|a|-|5b7c2e8d-6d90-411d-8e19-9a81067e6f6c
~~ROW COUNT: 1~~

prepst#!#exec#!#uniqueidentifier|-|a|-|<NULL>
~~ROW COUNT: 1~~

SELECT * FROM uniqueidentifier_dt;
~~START~~
str
51F178A6-53C7-472C-9BE1-1C08942342D7
DD8CB046-461D-411E-BE40-D219252CE849
B84EBCC9-C927-4CFE-B08E-DC7F25B5087C
BAB96BC8-60B9-40DD-B0DE-C90A80F5739E
D424FDEF-1404-4BAC-8289-C725B540F93D
60AEAA5C-E272-4B17-BAD0-C25710FD7A60
253FB146-7E45-45EF-9D92-BBE14A8AD1B2
DBA2726C-2131-409F-AEFA-5C8079571623
B3400FA7-3A60-40EC-B40E-FC85A3EB262D
851763B5-B068-42AE-88EC-764BFB0E5605
<NULL>
51F178A6-53C7-472C-9BE1-1C08942342D7
767392DF-87D0-450D-9B24-85A86C02811D
9BCB5632-53C3-4695-B617-D9A7055813CE
AC81A140-F686-4259-9B90-DD46F10B355F
3D08372D-770C-48B9-9740-A667D036680E
518D52C7-4D79-4143-AB33-B3765689FDF4
BC3FA456-7391-4060-B5D8-430048075CF4
3B75B2DD-01B7-4958-9DE7-F92410693547
CE8AF10A-2709-43B0-9E4E-A02753929D17
5B7C2E8D-6D90-411D-8E19-9A81067E6F6C
<NULL>
~~END~~


# to demonstrate the truncation of data when the value is too long
INSERT INTO uniqueidentifier_dt VALUES ('51f178a6-53c7-472c-9be1-1c08942342d7thisIsTooLong')
~~ROW COUNT: 1~~

prepst#!#exec#!#uniqueidentifier|-|a|-|767392df-87d0-450d-9b24-85a86c02811dthisIsTooLong
~~ERROR (Code: 0)~~
~~ERROR (Message: [07002] [Microsoft][ODBC Driver 17 for SQL Server]COUNT field incorrect or syntax error (0) (SQLExecDirectW))~~

SELECT * FROM uniqueidentifier_dt;
~~START~~
str
51F178A6-53C7-472C-9BE1-1C08942342D7
DD8CB046-461D-411E-BE40-D219252CE849
B84EBCC9-C927-4CFE-B08E-DC7F25B5087C
BAB96BC8-60B9-40DD-B0DE-C90A80F5739E
D424FDEF-1404-4BAC-8289-C725B540F93D
60AEAA5C-E272-4B17-BAD0-C25710FD7A60
253FB146-7E45-45EF-9D92-BBE14A8AD1B2
DBA2726C-2131-409F-AEFA-5C8079571623
B3400FA7-3A60-40EC-B40E-FC85A3EB262D
851763B5-B068-42AE-88EC-764BFB0E5605
<NULL>
51F178A6-53C7-472C-9BE1-1C08942342D7
767392DF-87D0-450D-9B24-85A86C02811D
9BCB5632-53C3-4695-B617-D9A7055813CE
AC81A140-F686-4259-9B90-DD46F10B355F
3D08372D-770C-48B9-9740-A667D036680E
518D52C7-4D79-4143-AB33-B3765689FDF4
BC3FA456-7391-4060-B5D8-430048075CF4
3B75B2DD-01B7-4958-9DE7-F92410693547
CE8AF10A-2709-43B0-9E4E-A02753929D17
5B7C2E8D-6D90-411D-8E19-9A81067E6F6C
<NULL>
51F178A6-53C7-472C-9BE1-1C08942342D7
~~END~~


DROP TABLE uniqueidentifier_dt;
